<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"/>

    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:title="@string/pref_enable_notifications_label"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"/>

</PreferenceScreen>
